# daily_ai4s_paper

./: .env  .env.example  .gitignore  LICENSE  README.md  langgraph.json  main.py  processed_papers_cache.json  pyproject.toml  requirements.txt
src/: analysis.py  cache.py  data_models.py  fetcher.py  filter.py  graph.py  llm_client.py  synthesizer.py
tests/: test_analysis.py  test_fetcher.py  test_filter.py  test_graph.py  test_llm_client.py  test_synthesizer.py
